	- Removed hashmap initialization for local database
	- Replaced Yugoslavia with Serbia and Montenegro

1.1.7  October 6th 2004
	- Specified ISO-8859-1 encoding for City, ISP and Organization field string
		(Yan Zhang Chen)

1.1.6  September 9th 2004
        - Fixed problem with postalCode, city and region fields 
	  returning null char (Frank Mather) 
	- Added support for GeoIP Netspeed Database (Frank Mather)
	- Added support for GEOIP_MEMORY_CACHE (Frank Mather)

1.1.5  June 3rd 2004
	- Added support for Maxmind GeoIP Region (Frank Mather)
	- Windows compatibility fix for CountryLookupTest.java (Hanan Al-Shargi)
	- Country name fixes

1.1.4  October 21st 2003
	- Added support for distributed queries (Frank Mather)
	- Massive code cleanup (Matt Tucker)
	- Added support for DMA code and Area codes (Frank Mather)

1.1.3  June 9th 2003
	- Added support for GeoIP Organization and ISP databases
	- Changed Taiwan, Province of China to Taiwan

1.1.2  December 16th 2002
	- Added support for postal codes in GeoIP City (beta)

1.1.1  Oct 31st 2002
	- Added support for GeoIP Full Edition, remaned CountryLookup class
	to Lookup

1.1.0  Oct 28th 2002
	- API Change!!! Return null instead of '--' if country can not be found
	- rewrote seekCountry to use loop instead of recursion for faster performance
	- Fixed error when looking Anonymous Proxies

1.0.4  Sep 11th 2002
	- Added close method to clean up filehandles
	(Jeroen Nijenhuis)

0.3.0  Aug  4th 2002
	- Added support for satellite providers

0.2.1  July 3rd 2002
	- Added support for anonymous proxies

0.1.2  Apr 14th 2002
	- Added public to CountryLookup class (Noel Bergman), should
	now be accessible outside of GeoIP package.

0.1.1  Apr 9th 2002
	- Initial Release